--- a/testing.Rmd
+++ b/testing.Rmd
@@ -16,24 +16,44 @@ templates <- load_templates("nonmem")
 ```
 
 ```{r}
-one_cmpt_iv <- blueprint %>% 
-  params(CL = 5,V = param(34, "TVV", .lower_bound = 0.1), KA = 1) 
+map2(templates, names(templates), ~ {
+  cat(glue::glue("--------  {.y} -------- \n\n"))
+  cat(.x)
+})
 ```
 
-```{r} 
-one_cmpt_iv <- one_cmpt_iv %>%
-  constants(STD_WT = 70) %>%
-  residual_error(prop = sigma_param(0.04, .comment = "Proportional Error")) %>%
-  with_data(head(Theoph)) %>%
-  from_path("path/to/my_data.csv") %>%
-  heirarchy(KA = 0.04, b1 = block(0.04, 0.61, 0.09, .params = c("CL", "V"), correlation = TRUE)) 
+
+```{r}
+one_cmpt_iv <- blueprint %>% 
+  parameters(CL = parameter(5,  
+                    lower_bound = 0.01, 
+                    upper_bound = 10),
+         V = parameter(34, lower_bound = 0.1)) 
 ```
 
 ```{r}
 one_cmpt_iv$get_all_elements()
 ```
 
-```{r}
-one_cmpt_iv %>% use_template(templates$`1-cmt-iv`) %>% render() %>% cat()
+```{r} 
+one_cmpt_iv <- one_cmpt_iv %>%
+  constants(STD_WT = 70) %>%
+  residual_error(prop = sigma_param(0.04, comment = "Proportional Error")) %>%
+  with_data(head(Theoph)) %>%
+  from_path("path/to/my_data.csv") 
+
+one_cmpt_iv %>%
+  heirarchies(CL = 0.04, V = 0.09) %>% use_template(templates$one_cmt_iv)%>% 
+  render() %>% cat()
+
+one_cmpt_iv %>%
+  heirarchies(b1 = block(0.04, 0.01, 0.09, param_names = c("CL", "V"))) %>% 
+  use_template(templates$one_cmt_iv) %>% 
+  render() %>% cat()
 ```
 
+```{r}
+one_cmpt_iv %>%
+  heirarchies(bl = block(0.04, 0.06, 0.09, params = c("CL", "V"))) %>% 
+  use_template(templates$one_cmt_iv) %>% render() %>% cat()
+```
