--- a/README.Rmd
+++ b/README.Rmd
@@ -10,6 +10,7 @@ BLUEPRINT
 Create a model blueprint, using a consistent API across modeling platforms.
 
 ```{r}
+library(blueprint)
 blueprint <- Blueprint$new("nonmem")
 ```
 
@@ -122,7 +123,7 @@ one_cmt_diag %>% render() %>% cat()
 even more standard templates
 
 ```{r, include = FALSE}
-opts_chunk$set(eval = FALSE)
+knitr::opts_chunk$set(eval = FALSE)
 ```
 
 query language sugar for templates
