--- a/README.Rmd
+++ b/README.Rmd
@@ -137,6 +137,105 @@ one_cmt_block %>%
   render() %>% cat()
 ```
 
+
+## Extending templates
+
+One of the most powerful components of blueprint, is the fact that the built-in
+templates are just starting points, and can easily be extended.
+
+```{r}
+bp <- Blueprint$new("nonmem")
+```
+
+In this case, a model has already been established,
+but would like to use blueprint to inject the parameter estimates
+
+In this case, blueprint understands how to inject the 
+theta and omega values, in the portion of the template below
+
+```
+{{#parameters}}
+{{> theta}}
+{{/parameters}}
+
+{{#omegas}}
+{{> omega}}
+{{/omegas}}
+```
+
+```{r}
+bp$template <- "
+$PROBLEM
+$INPUT ... omitted for simplicity
+$DATA ...omitted for simplicity
+$SUBROUTINE ADVAN2 TRANS2
+
+$PK
+TVF1 = THETA(1)
+F1 = TVF1*EXP(ETA(1))
+TVALAG1 = THETA(2)
+ALAG1 = TVALAG1*EXP(ETA(2))
+TVKA = THETA(3)
+KA = TVKA*EXP(ETA(3))
+TVCL = THETA(4)
+CL = TVCL*EXP(ETA(4))
+TVV = THETA(5)
+V = TVV*EXP(ETA(5))
+S2 = V/1000
+
+$ERROR
+IPRED=FW=IPRED
+; Specifications for M3 method
+LLOQ = 1.0 ;LLOQ = 1 ng/mL
+SD = SQRT(SIGMA(1,1))
+DUM=( LLOQ-IPRED ) / SD ;Dummy variable defining distribution
+CUMD=PHI(DUM);Cumulative distribution of DUM
+
+IF(BLQ.EQ.0.OR.NPDE_MODE.EQ.1) THEN ; 0 for measured sample
+F_FLAG=0
+Y = IPRED * (1+EPS(1))
+ENDIF
+
+IF(BLQ.EQ.1.AND.NPDE_MODE.EQ.0) THEN
+F_FLAG=1
+Y=CUMD
+MDVRES=1
+ENDIF
+
+IF(BLQ.EQ.1) DV_LOQ=LLOQ
+
+$THETA
+{{#parameters}}
+{{> theta}}
+{{/parameters}}
+
+{{#omegas}}
+{{> omega}}
+{{/omegas}}
+
+$EST ...omitted for simplicity
+"
+```
+
+```{r}
+bp %>% parameters(
+  F1 = parameter(0.8, upper_bound = 1),
+  ALAG1 = parameter(0.5, lower_bound = 0, comment = "lag time; hours"),
+  KA = parameter(1, comment = "1/hr"),
+  CL = parameter(1.4, lower_bound = 0.1, comment = "L/hr"),
+  V = parameter(32.5, lower_bound = 0.1, comment = "L")
+) %>%
+  heirarchies(F1 = 0.1,
+              ALAG1 = 0.1,
+              KA = 0.1,
+              CL_V = block(0.1, 0.01, 0.1,
+                           param_names = c("CL", "V"))) %>%
+  render() %>% cat
+```
+
+This templating leverages the [whisker](https://github.com/edwindj/whisker) library
+to do the templating injection.
+
 ## Eventual extensions
 
 even more standard templates
@@ -153,3 +252,7 @@ blueprint %>%
   parameterize("CL") 
 ```
 
+
+* shiny app to dynamically create control streams via GUI
+* expanding support for a generic ODE language interface
+* supporting more nonmem features
